# adverbs

./: .clang-format  CMakeLists.txt  dev-requirements.txt  format.sh  library.h  run_tests.sh
python/: CMakeLists.txt  _py_adverbs.cpp  adverbs_pyext.cpp  test_ext.py
src/: CMakeLists.txt  adverbs.cpp  adverbs.h
tests/: BasicTest.cpp  CMakeLists.txt  context_handle_test.cpp  scoped_device_list_test.cpp
